--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bootstrap4==1.1.1
 django-cors-headers==3.3.0
 django-pandas==0.6.1
 djangorestframework==3.11.0
+djangotoolbox==1.8.0
 kombu==4.6.8
 mongoengine==0.20.0
 numpy==1.18.4
@@ -15,6 +16,7 @@ pandas==1.0.3
 pymongo==3.10.1
 python-dateutil==2.8.1
 pytz==2020.1
+redis==3.5.2
 six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.3.1
