--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ numpy==1.18.4
 pandas==1.0.3
 pymongo==3.10.1
 python-dateutil==2.8.1
+python3-memcached==1.51
 pytz==2020.1
 redis==3.5.2
 six==1.15.0
